# libraries

./: .clang-format  .clang-tidy  .gitignore  README.md
cpp_driver/: CMakeLists.txt  build.sh
cpp_driver/include/: Driver.hpp  dynamic_lib.hpp  static_lib.hpp
cpp_driver/src/: Driver.cpp  main.cpp
simple_dynamic_lib/: CMakeLists.txt  build.sh
simple_dynamic_lib/include/: dynamic_lib.hpp
simple_dynamic_lib/src/: dynamic_lib.cpp
simple_dynamic_lib/test/: CMakeLists.txt  test_dynamic_lib.cpp
simple_static_lib/: CMakeLists.txt  build.sh
simple_static_lib/include/: static_lib.hpp
simple_static_lib/src/: static_lib.cpp
simple_static_lib/test/: CMakeLists.txt  test_static_lib.cpp
